--- a/xplugin/xplugin.vcxproj
+++ b/xplugin/xplugin.vcxproj
@@ -80,7 +80,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)Devkit;$(SolutionDir)Devkit\LugormodHeaders;$(SolutionDir)Devkit\CoreTypes;$(SolutionDir)qmm;$(SolutionDir)\jkasdk\game;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Devkit;$(SolutionDir)Devkit\LugormodHeaders;$(SolutionDir)Devkit\CoreTypes;$(SolutionDir)qmm;$(SolutionDir)jkasdk\game;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_WARNINGS;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
